--- a/CollectionView21-10/Base.lproj/Main.storyboard
+++ b/CollectionView21-10/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
             </objects>
             <point key="canvasLocation" x="-1330" y="14"/>
         </scene>
-        <!--View Controller-->
+        <!--Servicios de google-->
         <scene sceneID="5ci-kg-yoe">
             <objects>
                 <collectionViewController id="ebi-Gb-afb" customClass="ViewController" sceneMemberID="viewController">
@@ -39,27 +39,27 @@
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="prototipeCell" id="GzG-yS-YaY" customClass="cell">
-                                <rect key="frame" x="0.0" y="0.0" width="199" height="231"/>
+                                <rect key="frame" x="0.0" y="0.0" width="190" height="231"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ikO-jJ-rhR">
-                                    <rect key="frame" x="0.0" y="0.0" width="199" height="231"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="190" height="231"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vBX-MZ-P8s">
-                                            <rect key="frame" x="8" y="20" width="182" height="145"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AnC-Fs-aus">
-                                            <rect key="frame" x="78" y="189" width="42" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AnC-Fs-aus">
+                                            <rect key="frame" x="8" y="189" width="174" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vBX-MZ-P8s">
+                                            <rect key="frame" x="8" y="18" width="174" height="145"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
                                     </subviews>
                                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 </collectionViewCellContentView>
-                                <size key="customSize" width="199" height="231"/>
+                                <size key="customSize" width="190" height="231"/>
                                 <connections>
                                     <outlet property="LbPrototype" destination="AnC-Fs-aus" id="5sB-Dh-iT3"/>
                                     <outlet property="imgPrototype" destination="vBX-MZ-P8s" id="XQK-Tj-7ed"/>
@@ -71,7 +71,7 @@
                             <outlet property="delegate" destination="ebi-Gb-afb" id="Dyv-MO-Xvr"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="hwQ-WX-XOT"/>
+                    <navigationItem key="navigationItem" title="Servicios de google" id="hwQ-WX-XOT"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="guV-vn-orO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
